force-app/main/default/objects/Product2/fields/Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>Activity_Code__c</fullName>
    <label>Activity Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>