force-app/main/default/objects/Product2/fields/CEU_Amount__c.field-meta.xml
<CustomField>
    <fullName>CEU_Amount__c</fullName>
    <description>The amount of Continuing Education Unit&apos;s being offered for this course. Primary for professional education industries and approved by a sponsoring organization.</description>
    <inlineHelpText>The amount of Continuing Education Unit&apos;s being offered</inlineHelpText>
    <label>CEU Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>