force-app/main/default/objects/Product2/fields/Course_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_End_Date__c</fullName>
    <description>Date the Course Ends</description>
    <inlineHelpText>Date the Course Ends.  If Online (On Demand), leave blank</inlineHelpText>
    <label>Course End Date</label>
    <type>Date</type>
</CustomField>