force-app/main/default/objects/Product2/fields/Course_Image__c.field-meta.xml
<CustomField>
    <fullName>Course_Image__c</fullName>
    <description>Image utilized for the Course Offering.  It may pull into the online website or store front</description>
    <inlineHelpText>Image utilized for the Course Offering.  It may pull into the online website or store front</inlineHelpText>
    <label>Course Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>