force-app/main/default/objects/Product2/fields/Course_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Start_Date__c</fullName>
    <description>Date the Course Begins or the date that the course becomes available</description>
    <inlineHelpText>Date Course Begins or is available if a self-guided Course</inlineHelpText>
    <label>Course Start Date</label>
    <type>Date</type>
</CustomField>