force-app/main/default/objects/Product2/fields/Enrollment_Target__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Target__c</fullName>
    <description>Goal for number of registrations received for course</description>
    <inlineHelpText>Goal for number of registrations received for course</inlineHelpText>
    <label>Enrollment Target</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>