force-app/main/default/objects/Product2/fields/Feature_Date__c.field-meta.xml
<CustomField>
    <fullName>Feature_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date the program should start being featured on the website. Newer dates will be pulled to the top of the list, so if a program should get pulled up, change the date to a newer/future date.</description>
    <inlineHelpText>Date that will filter the programs. The newer dates will be pulled to the top of the list.</inlineHelpText>
    <label>Feature Date</label>
    <type>Date</type>
</CustomField>