force-app/main/default/objects/Product2/fields/Featured_Course__c.field-meta.xml
<CustomField>
    <fullName>Featured_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify if this is a featured course and it&apos;ll display as a primary course offering</description>
    <inlineHelpText>Set to true if the course should be one of the 3 featured courses on cape.stthomas.edu</inlineHelpText>
    <label>Featured Course</label>
    <type>Checkbox</type>
</CustomField>