force-app/main/default/objects/Product2/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <description>How is the class being administered.</description>
    <inlineHelpText>How the class is being administered.</inlineHelpText>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online: Self-Guided</fullName>
            </value>
            <value>
                <fullName>Online: Instructor-Guided</fullName>
            </value>
            <value>
                <fullName>Face-to-Face</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>