force-app/main/default/objects/Product2/fields/In_Person_Meetings__c.field-meta.xml
<CustomField>
    <fullName>In_Person_Meetings__c</fullName>
    <label>In Person Meetings</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>