force-app/main/default/objects/Product2/fields/Index_Code__c.field-meta.xml
<CustomField>
    <fullName>Index_Code__c</fullName>
    <description>20252 - this is Selim&apos;s
33430 - this is Engineering&apos;s
40493 - this is CAPE&apos;s</description>
    <inlineHelpText>20252 - this is Selim&apos;s
33430 - this is Engineering&apos;s
40493 - this is CAPE&apos;s</inlineHelpText>
    <label>Index Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20252</fullName>
                <label>20252 (Selim Center)</label>
            </value>
            <value>
                <fullName>33430</fullName>
                <label>33430 (Engineering)</label>
            </value>
            <value>
                <fullName>40493</fullName>
                <label>40493 (CAPE)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>