force-app/main/default/objects/Product2/fields/No_of_Meetings_Start_Details__c.field-meta.xml
<CustomField>
    <fullName>No_of_Meetings_Start_Details__c</fullName>
    <description>Number of times this course meets or when the course starts</description>
    <inlineHelpText>Number of times this course meets or when the course starts</inlineHelpText>
    <label>No. of  Meetings/Start Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>