force-app/main/default/objects/Product2/fields/Product_SKU_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU_Number__c</fullName>
    <description>From LMS Checkout - these are Courses Offered and built by LMS Checkout through integration</description>
    <inlineHelpText>Matches SKU in LMS</inlineHelpText>
    <label>Product SKU Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>