force-app/main/default/objects/Product2/fields/Product_Source__c.field-meta.xml
<CustomField>
    <fullName>Product_Source__c</fullName>
    <description>From LMS Checkout</description>
    <inlineHelpText>From LMS Checkout</inlineHelpText>
    <label>Product Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>