force-app/main/default/objects/Product2/fields/Retire_Date__c.field-meta.xml
<CustomField>
    <fullName>Retire_Date__c</fullName>
    <description>Date that it will no longer appear on the course catalog as an offering</description>
    <inlineHelpText>Date that it will no longer appear on the course catalog as an offering</inlineHelpText>
    <label>Retire Date</label>
    <type>Date</type>
</CustomField>