force-app/main/default/objects/Product2/fields/Sponsoring_College_School__c.field-meta.xml
<CustomField>
    <fullName>Sponsoring_College_School__c</fullName>
    <description>What School is Sponsoring the course content</description>
    <inlineHelpText>School/College sponsoring the course content</inlineHelpText>
    <label>Sponsoring College/School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>College of Arts &amp; Sciences</fullName>
            </value>
            <value>
                <fullName>Dougherty Family College</fullName>
            </value>
            <value>
                <fullName>Morrison College of Health</fullName>
            </value>
            <value>
                <fullName>Opus College of Business</fullName>
            </value>
            <value>
                <fullName>School of Divinity</fullName>
            </value>
            <value>
                <fullName>School of Education</fullName>
            </value>
            <value>
                <fullName>School of Engineering</fullName>
            </value>
            <value>
                <fullName>School of Law</fullName>
            </value>
            <value>
                <fullName>The Selim Center</fullName>
            </value>
            <value>
                <fullName>University of St. Thomas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>