force-app/main/default/objects/Product2/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Start Time of the Course. If an On-Demand Course, Time may be blank</description>
    <inlineHelpText>Leave blank for Online (On Demand) Format.</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>