force-app/main/default/objects/Product2/fields/Storefront_Info_Page__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Info_Page__c</fullName>
    <description>Link to the course Info Page or Storefront Page</description>
    <inlineHelpText>Link to the course Info Page or Storefront Page</inlineHelpText>
    <label>Storefront/Info Page</label>
    <type>Url</type>
</CustomField>