force-app/main/default/objects/Product2/fields/Subject_Area__c.field-meta.xml
<CustomField>
    <fullName>Subject_Area__c</fullName>
    <description>Subject areas related to the course, which could be multiple.  The first is typically the primary</description>
    <inlineHelpText>Subject area(s) related to the course.</inlineHelpText>
    <label>Subject Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>General Business</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Nonprofit</fullName>
            </value>
            <value>
                <fullName>Personal Enrichment</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>