force-app/main/default/objects/Product2/fields/Summary_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Summary_Display_Name__c</fullName>
    <description>Summary Display Name field, primarily utilized for reports and Dashboards.  Intended to allow Names to clearly display on a Dashboard</description>
    <inlineHelpText>14 Character limit. Intended to clearly display on a Dashboard</inlineHelpText>
    <label>Summary Display Name</label>
    <length>14</length>
    <type>Text</type>
</CustomField>