force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Activity_Code__c</columns>
    <columns>Index_Code__c</columns>
    <columns>Course_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
    <language>en_US</language>
</ListView>