force-app/main/default/objects/Product2/listViews/Selim.listView-meta.xml
<ListView>
    <fullName>Selim</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Storefront_Info_Page__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Course_Start_Date__c</columns>
    <columns>Format__c</columns>
    <columns>Course_End_Date__c</columns>
    <columns>Retire_Date__c</columns>
    <columns>Sponsoring_College_School__c</columns>
    <columns>Start_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Index_Code__c</field>
        <operation>equals</operation>
        <value>20252</value>
    </filters>
    <label>Selim</label>
    <language>en_US</language>
</ListView>